--- a/burger/src/components/SideBar/style.module.css
+++ b/burger/src/components/SideBar/style.module.css
@@ -7,8 +7,24 @@
   height: 100%;
   z-index: 200;
   padding: 32px 16px;
+  transition: all 0.3s ease-out;
+}
+
+@media (min-width: 500px) {
+  .SideBar {
+    display: none;
+  }
+
 }
 
 .Logo {
   height: 15%;
+}
+
+.Open {
+  transform: translateX(0%);
+}
+
+.Close {
+  transform: translateX(-100%);
 }
